load("@rules_haskell//haskell:protobuf.bzl", "haskell_proto_toolchain")

haskell_proto_toolchain(
    name = "proto_toolchain",
    protoc = "@com_google_protobuf//:protoc",
    plugin = "@proto-lens-protoc",
    deps = [
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:containers",
        "@stackage//:deepseq",
        "@stackage//:lens-family",
        "@stackage//:proto-lens",
        "@stackage//:text",
        "@stackage//:vector",
    ],
)
