load("@rules_haskell//haskell:protobuf.bzl", "haskell_proto_library")
exports_files(["rule_info.proto"])

proto_library(
    name = "rule_info_proto",
    srcs = ["rule_info.proto"],
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

haskell_proto_library(
    name = "rule_info_haskell_proto",
    deps = [":rule_info_proto"],
    visibility = ["//visibility:public"],
)
